@@ -1,0 +1,1 @@
+normal:partial_from_c => <%= render :partial => 'c/partial_in_bc' %>
